# CoolMath

./: .gitignore  CMakeLists.txt  Tutorial  main.cpp
Base/: CMakeLists.txt  matrix.cpp  matrix.h  matrix.inl  vector.h  vector.inl
Matrix/: CMakeLists.txt  matrix.cpp  matrix.h
Parallel/: CMakeLists.txt  add.cu  gpu_vector.h  gpu_vector.inl
